crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/path_import_alias_vs_default_import/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[main.sol:5:8]
   │
 5 │ import "./another.sol";
   │        ───────┬───────  
   │               ╰───────── Error occurred here.
───╯
